# OrbisPrismMCP

./: .gitignore  Agents.md  CONTRIBUTING.md  MANIFEST.in  README.es.md  README.md  main.py  pyproject.toml  requirements.txt  test_search.py
.github/workflows/: python-publish.yml
docs/: CREDITS.md  PHILOSOPHY.es.md  PHILOSOPHY.md
src/prism/: __init__.py  cli.py  config.py  db.py  decompile.py  detection.py  extractor.py  i18n.py  mcp_server.py  prune.py  search.py
src/prism/application/: __init__.py  assets_use_cases.py  call_flow_service.py  documentation_service.py  ecs_service.py  event_service.py  hierarchy.py  hierarchy_service.py  index_queries.py  pattern_service.py  read_source.py  search.py  snippet_service.py  usages.py
src/prism/domain/: __init__.py  asset.py  constants.py  types.py
src/prism/entrypoints/: __init__.py  cli.py  mcp_server.py
src/prism/entrypoints/cli/: README.md  args.py  branding.py  config.py  config_cmd.py  context.py  help.py  lang.py  main.py  mcp_cmd.py  out.py  parser.py  query.py
src/prism/entrypoints/mcp/: README.md  bootstrap.py  main.py  utils.py
src/prism/entrypoints/mcp/tools/: analysis.py  assets.py  class_details.py  context.py  documentation.py  ecs.py  events.py  hierarchy.py  listing.py  patterns.py  search.py  snippets.py  source.py  usages.py
src/prism/infrastructure/: __init__.py  assets_indexer.py  config_impl.py  db.py  decompile.py  detection.py  extractor.py  file_config.py  jar_downloader.py  prune.py  search_utils.py  sqlite_assets_repository.py  sqlite_repository.py  workspace_cleanup.py
src/prism/locales/: en.json  es.json
src/prism/ports/: __init__.py  assets_repository.py  config_provider.py  index_repository.py
src/prism/resources/: knowledge.en.json  knowledge.es.json  knowledge_base.json
temp/: Pr_Description.md
