[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orbis_prism_mcp"
version = "1.0.0"
description = "Hytale SDK analysis tool and MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OrbisFactory"}
]
keywords = ["hytale", "mcp", "modding", "decompiler", "analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Java Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "shellingham>=1.5.4",
]

[project.urls]
Homepage = "https://github.com/OrbisFactory/OrbisPrismMCP"

[project.scripts]
prism = "prism.entrypoints.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["prism*"]

[tool.setuptools.package-data]
prism = ["locales/*.json"]

[tool.typer]
app = "prism.entrypoints.cli.main:app"
